# describecsv

./: LICENSE  README.md  pyproject.toml
src/describecsv/: __init__.py  describecsv.py  markdown_output.py
