[project]
name = "describecsv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Neal Caren", email = "neal.caren@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
describecsv = "describecsv:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
